2017-01-25  Peter Stephenson  <p.stephenson@samsung.com>

	* 40413: Src/params.c, Test/E01options.ztst: no WARN_NESTED_VAR
	warning on bogus parameter created for subscripted assignment.

2017-01-25  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 40403/0004: Functions/VCS_Info/Backends/VCS_INFO_get_data_git,
	Functions/VCS_Info/Backends/VCS_INFO_get_data_hg,
	Functions/VCS_Info/VCS_INFO_quilt,
	Functions/VCS_Info/VCS_INFO_set-patch-format: vcs_info
	set-patch-format helper: Part #4.

	* 40403/0003: Functions/VCS_Info/Backends/VCS_INFO_get_data_git,
	Functions/VCS_Info/Backends/VCS_INFO_get_data_hg,
	Functions/VCS_Info/VCS_INFO_quilt,
	Functions/VCS_Info/VCS_INFO_set-patch-format: vcs_info
	set-patch-format helper: Part #3.

	* 40403/0002: Functions/VCS_Info/Backends/VCS_INFO_get_data_git,
	Functions/VCS_Info/Backends/VCS_INFO_get_data_hg,
	Functions/VCS_Info/VCS_INFO_quilt,
	Functions/VCS_Info/VCS_INFO_set-patch-format: vcs_info
	set-patch-format helper: Part #2.

	* 40403/0001: Functions/VCS_Info/Backends/VCS_INFO_get_data_git,
	Functions/VCS_Info/Backends/VCS_INFO_get_data_hg,
	Functions/VCS_Info/VCS_INFO_quilt,
	Functions/VCS_Info/VCS_INFO_set-patch-format,
	Functions/VCS_Info/vcs_info: vcs_info set-patch-format helper:
	Part #1.

	* 40401: Functions/VCS_Info/Backends/VCS_INFO_get_data_git:
	vcs_info git: Fix the %c patch-format expando.

	* 40396: Doc/Zsh/contrib.yo: vcs_info quilt: More documentation
	of '%Q' and 'use-quilt'.

	* 40392: Functions/VCS_Info/VCS_INFO_patch2subject: vcs_info
	patch2subject: Support `git show` output.

2017-01-24  Mikael Magnusson  <mikachu@gmail.com>

	* posted: Test/D07multibyte.ztst: Make D07 recognize more
	spellings of pl_PL.UTF-8

2017-01-24  Peter Stephenson  <p.stephenson@samsung.com>

	* 40404: Src/builtin.c: quoting of commands in whence should
	only apply to whence -v.

2017-01-23  Peter Stephenson  <p.stephenson@samsung.com>

	* 40391: Completion/compinit, Doc/Zsh/builtins.yo,