@@ -1,3 +1,8 @@
+2017-01-26  Peter Stephenson  <p.w.stephenson@ntlworld.com>
+
+	* 40422: Src/params.c, Test/E01options.ztst: more
+	WARN_NESTED_VAR cases that were broken in the original patch.
+
 2017-01-25  Peter Stephenson  <p.stephenson@samsung.com>
 
 	* 40413: Src/params.c, Test/E01options.ztst: no WARN_NESTED_VAR
